--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context="es.coru.andiag.andiag_mvp_demo.ActivityMain">
+                tools:context="es.coru.andiag.andiag_mvp_demo.com.andiag.demo_app.ActivityMain">
 
     <Button
         android:id="@+id/fragment_button"
